--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,14 @@
             <version>10.8.1</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-core -->
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-core</artifactId>
+            <version>2.17.2</version>
+        </dependency>
+
+
     </dependencies>
 
     <properties>
