--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-api</artifactId>
             <version>5.10.0</version>
+            <scope>test</scope>
         </dependency>
 
 
@@ -19,6 +20,7 @@
             <groupId>org.flywaydb</groupId>
             <artifactId>flyway-core</artifactId>
             <version>10.15.2</version>
+            <scope>test</scope>
         </dependency>
 
 
